--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Project to analyze casino odds, for sporting events, using social data.
+
+Created a common folder at: /mnt/chevron/kykamath/data/twitter/odds_maker
