Added code to create expert users.

--- a/README
+++ b/README
@@ -9,6 +9,7 @@ Experts crawler:
 	
 ------------------------
 General info
-------------------------	
-Common folder at /mnt/chevron/kykamath/data/twitter/odds_maker
+------------------------
+	1. Expert users list (Needs VPN): http://wheezy/kykamath/chevron/data/twitter/odds_maker/users/crawl/users_to_crawl	
+	2. Common folder is at: /mnt/chevron/kykamath/data/twitter/odds_maker
 
